# ParallelNSU

./: README.md  main.cu  pres_april_19_pp.pptx
lab_2/task_1/: main  main.c  main.cpp  main.py  make_plot.py  test.py  testc.cpp  threads_times.csv
lab_2/task_2/: main  main.c  main.cpp  main.py  make_plot.py  threads_times.csv
lab_2/task_3/: main  main.py  main1  main1.cpp  main2  main2.c  main2.cpp  make_plot.py  test  test.cpp  threads_times_1.csv  threads_times_2.csv  threads_times_3_1.csv  threads_times_3_2.csv
lab_3/task_1/: main.cpp  prev.cpp
lab_3/task_2/: CMakeLists.txt  maIn.py  main.cpp  pow.txt  pows.txt  sin.txt  sins.txt  sqrt.txt  sqrts.txt  square.txt  squares.txt
lab_4/: main.py
lab_5/: main.py
lab_6/: main.cpp  output.txt
task_1/: CMakeLists.txt  README.md  main.cpp
task_2/: main  main.c  main.py  threads_times.csv
